charts/env/prod/punchlog-backend/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: pl-prod
spec:
  selector:
    matchLabels:
      app: punchlog-backend
  template:
    metadata:
      labels:
        app: punchlog-backend
    spec:
      containers:
        - name: backend-deployment
          image: 767397975346.dkr.ecr.eu-north-1.amazonaws.com/punchlog-be:${be_image_tag}
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: 256Mi
              cpu: "500m"
