charts/env/prod/punchlog-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: unified-ingress
  namespace: pl-prod
spec:
  ingressClassName: nginx
  rules:
    - host: punchlog.io
      http:
        paths:
          - path: /api
            pathType: ImplementationSpecific
            backend:
              service:
                name: backend-service
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 8080
